--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Mk</title>
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="font-roboto text-on-surface bg-background scroll-smooth">
   <app-root></app-root>
 </body>
 </html>
