feat: add meta tags for SEO and social sharing

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,30 @@
   <meta charset="utf-8">
   <title>Mk</title>
   <base href="/">
+
+  <!-- Meta SEO -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Portafolio de Dario Quispe, estudiante de Ingeniería de Software de Lima, Perú. Descubre mis proyectos y habilidades en desarrollo web y móvil.">
+  <meta name="keywords" content="portafolio, Dario Quispe, Minkaspr, desarrollo de software, proyectos de software, Angular, Spring Boot, Perú">
+  <meta name="author" content="Dario Quispe">
+  <link rel="canonical" href="https://dev-highlights.vercel.app/">
+
+  <!-- Open Graph (para compartir en redes sociales) -->
+  <meta property="og:title" content="Minkaspr - Portafolio de Dario Quispe">
+  <meta property="og:description" content="Portafolio de Dario Quispe, estudiante de Ingeniería de Software de Lima, Perú. Descubre mis proyectos y habilidades en desarrollo web y móvil.">
+  <meta property="og:image" content="https://dev-highlights.vercel.app/imgs/mk_portfolio_card.jpg">
+  <meta property="og:url" content="https://dev-highlights.vercel.app/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Minkaspr - Portafolio de Dario Quispe">
+  <meta name="twitter:description" content="Portafolio de Dario Quispe, estudiante de Ingeniería de Software de Lima, Perú. Descubre mis proyectos y habilidades en desarrollo web y móvil.">
+  <meta name="twitter:image" content="https://dev-highlights.vercel.app/imgs/mk_portfolio_card.jpg">
+
+  <!-- Multilenguaje -->
+  <link rel="alternate" hreflang="es" href="https://dev-highlights.vercel.app/" />
+  <link rel="alternate" hreflang="en" href="https://dev-highlights.vercel.app/" />
 </head>
 <body class="font-roboto text-on-surface bg-background scroll-smooth">
   <app-root></app-root>
